define some variable for product and repo ids for better understanding